# VNA-Project

./: .gitignore  CLAUDE.md  upskill.config.yaml
code/: pyproject.toml  requirements.txt
code/LibreVNA-dev/calibration/: SOLT_1_2_43G-2_45G_300pt.cal
code/LibreVNA-dev/gui/: 7_realtime_vna_plotter_mvp.py  LibreVNA_GUI_v_1_0.ui  preview_ui.py  sweep_config.yaml
code/LibreVNA-dev/gui/design/: main_window.py  main_window.ui
code/LibreVNA-dev/gui/mvp/: SOLT_1_2_43G-2_45G_300pt.cal  __init__.py  backend_wrapper.py  libreVNA.py  main_window.py  model.py  presenter.py  sweep_config.yaml  view.py  vna_backend.py
code/LibreVNA-dev/gui/resources/: resources.qrc
code/LibreVNA-dev/markdown/20260204/: part2-sweep-speed-analysis.md
code/LibreVNA-dev/markdown/20260205/: part2-continuous-sweep-implementation.md  script5-continuous-mode-stuck-bug.md  single-vs-continuous-mode-summary.md
code/LibreVNA-dev/markdown/20260206/: script6-streaming-server-fix.md  streaming-server-auto-enable-implementation.md
code/LibreVNA-dev/markdown/20260209/: pyqt6-tools-pkg_resources-issue.md  script6-calibration-path-fix.md  windows-qt-platform-issue.md
code/LibreVNA-dev/markdown/20260210/: IMPLEMENTATION_SUMMARY.md  QUICK_START.md  README.md  calibration-loading-fix.md  gui-backend-refactoring.md
code/LibreVNA-dev/markdown/20260211/: Dataflux.csv  plot_dataflux.py  (+2 more)
code/LibreVNA-dev/notebook/: 1_s11_cal_verification.ipynb  2_sweep_speed_and_ifbw.ipynb  3_single_vs_continuous_sweep.ipynb  s11_cal_verification.ipynb
code/LibreVNA-dev/scripts/: 0_librevna_cleanup.py  1_librevna_cal_check.py  2_s11_cal_verification_sweep.py  3_sweep_speed_baseline.py  4_ifbw_parameter_sweep.py  5_continuous_sweep_speed.py  6_librevna_gui_mode_sweep_test.py  8_plot_monitor_data.py  SOLT_1_200M-250M_801pt.cal  libreVNA.py  sweep_config.yaml
code/LibreVNA-dev/tools/: README.md
(+54 files in other folders)
