[project]
name = "code"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "cisco-ai-a2a-scanner>=1.0.1",
    "h5py>=3.15.1",
    "matplotlib>=3.10.8",
    "numpy>=2.2.6",
    "openpyxl>=3.1.5",
    "pandas>=2.3.3",
    "plotly>=6.5.2",
    "pyyaml>=6.0.3",
    "scikit-learn>=1.7.2",
    "scikit-rf>=1.10.0",
    "scipy>=1.15.3",
    "seaborn>=0.13.2",
]
